--- a/templates_base/base.html
+++ b/templates_base/base.html
@@ -26,7 +26,7 @@
             <a class="nav-link" href="{% url 'inicio' %}">Home</a>
             <a class="nav-link" href="#!">About</a>
             <a class="nav-link" href="#!">Contact</a>
-            <a class="nav-link active" aria-current="page" href="#">Blog</a></li>
+            <a class="nav-link active" aria-current="page" href="{% url 'lista_posteos' %}">Blog</a></li>
             {% if user.is_authenticated %}
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -54,13 +54,13 @@
         </div>
      
 
-        <section style="display: flex;; justify-content: center; align-items: center;">
+        <section style=" justify-content: center; align-items: center;">
             {% block contenido %}
             {% endblock contenido %}
         </section>
 
         <!-- Footer-->
-        <footer class="footer bg-light">
+        <footer class="footer bg-light" style= "align-items:center,">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
