--- a/templates_base/base.html
+++ b/templates_base/base.html
@@ -21,7 +21,7 @@
 
     <body>
        <!-- Navigation-->
-       <nav class="navbar navbar-light bg-light static-top">
+       <nav class="navbar navbar-light bg-light static-top" display="inline">
         <div class="container">
             <a class="nav-link" href="{% url 'inicio' %}">Home</a>
             <a class="nav-link" href="#!">About</a>
@@ -60,7 +60,7 @@
         </section>
 
         <!-- Footer-->
-        <footer class="footer bg-light" style= "align-items:center,">
+        <footer class="footer bg-light" display=" inline,">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
