--- a/templates_base/inicio.html
+++ b/templates_base/inicio.html
@@ -27,7 +27,7 @@
 
 {% else %}
 <h3 style="display: flex; justify-content: center">Bienvenid@ a Compumundo HiperMegaRed! </h3>
-<h4 style="display: flex; justify-content: center">Registrese para acceder a todo nuestro contenido</h4>
+
 {% endif %}
 
 
@@ -40,7 +40,7 @@
         <div class="col-lg-8">
             <!-- Featured blog post-->
             <div class="card mb-4">
-                <a href="#!"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                <a href=""><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
                 <div class="card-body">
                     <div class="small text-muted">January 1, 2023</div>
                     <h2 class="card-title">Featured Post Title</h2>
@@ -77,7 +77,7 @@
                     <div class="card mb-4">
                         <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
                         <div class="card-body">
-                            <div class="small text-muted">January 1, 2023</div>
+                            <div class="small text-muted">{{ posteo.fecha_publicacion }}</div>
                             <h2 class="card-title h4">Post Title</h2>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
                             <a class="btn btn-primary" href="#!">Read more →</a>
