--- a/templates_base/inicio.html
+++ b/templates_base/inicio.html
@@ -49,18 +49,20 @@
                 </div>
             </div>
             <!-- Nested row for non-featured blog posts-->
-            <div class="row">
+            {% for posteo in posteos %}
+             <div class="row">
                 <div class="col-lg-6">
                     <!-- Blog post-->
                     <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                        <a href="#!"><img src="{{ posteo.imagen.url }}" alt="{{ posteo.imagen.alt }}" style="max-width: 400px; max-height: 300px;" /></a>
                         <div class="card-body">
-                            <div class="small text-muted">January 1, 2023</div>
-                            <h2 class="card-title h4">Post Title</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
+                            <div class="small text-muted">{{ posteo.fecha_publicacion }}</div>
+                            <h2 class="card-title h4">{{ posteo.titulo }}</h2>
+                            <p class="card-text">{{ posteo.texto }}</p>
                             <a class="btn btn-primary" href="#!">Read more →</a>
                         </div>
                     </div>
+            {% endfor %}
                     <!-- Blog post-->
                     <div class="card mb-4">
                         <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
