--- a/templates_base/base.html
+++ b/templates_base/base.html
@@ -26,8 +26,9 @@
             <a class="nav-link" href="{% url 'inicio' %}">Home</a>
             <a class="nav-link" href="{% url 'about' %}">About</a>
             <a class="nav-link" href="#!">Contact</a>
-            <a class="nav-link active" aria-current="page" href="{% url 'lista_posteos' %}">Blog</a></li>
+            
             {% if user.is_authenticated %}
+            <a class="nav-link active" aria-current="page" href="{% url 'lista_posteos' %}">Lista de Publicaciones</a></li>
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                     <div style="display: inline-flex;">
@@ -75,13 +76,10 @@
                     <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
                         <ul class="list-inline mb-0">
                             <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-facebook fs-3"></i></a>
-                            </li>
-                            <li class="list-inline-item me-4">
-                                <a href="#!"><i class="bi-twitter fs-3"></i></a>
+                                <a href="https://twitter.com/wassermanngeer"><i class="bi-twitter fs-3"></i></a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://www.instagram.com/espndeportes/?hl=es"><i class="bi-instagram fs-3"></i></a>
+                                <a href="https://www.instagram.com/gerwassermann/?hl=en"><i class="bi-instagram fs-3"></i></a>
                             </li>
                         </ul>
                     </div>
