--- a/templates_base/inicio.html
+++ b/templates_base/inicio.html
@@ -42,6 +42,11 @@
 
 
 </div>
+<form action="{% url 'buscar_posteo' %}" method="post">
+    {% csrf_token %}
+    <input type="text" name="busqueda">
+    <input type="submit" value="Buscar por titulo">
+
 <br><br>
 <div class="container">
     <!-- Nested row for non-featured blog posts -->
