--- a/templates_base/base.html
+++ b/templates_base/base.html
@@ -82,6 +82,9 @@
                     <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
                         <ul class="list-inline mb-0">
                             <li class="list-inline-item me-4">
+                                <a href="https://www.linkedin.com/in/wassermanngermanm/"><i class="bi bi-linkedin fs-3"></i></a>
+                            </li>
+                            <li class="list-inline-item me-4">
                                 <a href="https://twitter.com/wassermanngeer"><i class="bi-twitter fs-3"></i></a>
                             </li>
                             <li class="list-inline-item">
